# own-your-data-data-stack

./: .gitignore  Makefile  README.md  config.py  data_generator.py  docker-compose.yaml  example.csv  infrastructure.kubeconfig.yaml  pyproject.toml  read_csv_as_stream.py  read_df_as_stream.py  read_stream.ipynb
airflow-orchestration/: Makefile  README.md  main.py  pyproject.toml
airflow-orchestration/dags/: __init__.py
airflow-orchestration/dags/admin/: credit_card_fraud_provider.py  my_first_dag.py
airflow-orchestration/dags/datasets/: fraud_detection.py
airflow-orchestration/tests/: conftest.py
airflow-orchestration/tests/unit/: test_dag_integrity.py
airflow-orchestration/tests/unit/admin/: test_credit_card_fraud_provider.py  test_pytest.py
bronze_orders/_delta_log/: .00000000000000000000.crc.crc  .00000000000000000000.json.crc
data/: README.md
infrastructure/k3d/: config.yaml  traefik_tcp_config.yaml
infrastructure/kubernetes/cloudnativepg/cluster/: db_ingressroute.yaml  dev.values.yaml  helmfile.yaml
infrastructure/kubernetes/cloudnativepg/operator/: helmfile.yaml
infrastructure/postgres/a/migrations/: 0000001_create_transaction_records_tables.sql
raw-data/: README.md
spark-pipelines/: common.py  example.csv  generate_csv_stream.py  pyproject.toml  read_csv_as_stream.py
